--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Thinkful-Ed/node-shopping-list-v5"
+    "url": "git+https://github.com/Thinkful-Ed/node-shopping-list-v5.git"
   },
   "keywords": [
     "node",
     "hyperdev",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Thinkful-Ed/node-shopping-list-v5/issues"
+  },
+  "homepage": "https://github.com/Thinkful-Ed/node-shopping-list-v5#readme",
+  "devDependencies": {},
+  "author": ""
 }
